# Gov_Travel_App

./: .dockerignore  .env.example  .gitignore  Dockerfile  Govt Links.txt  PORTAL_README.md  QUICK_START.md  README.md  app.js  calculator.js  cityData.js  config.js  currencyConverter.js  docker-compose.yml  enhanced-features.js  extract_canadian.js  extract_cities.js  extract_cities2.js  flightSearch.js  flightService.js  improvements.json  index.html  jest.config.js  njcRates.js  openFlightsService.js  package.json  pyproject.toml  pytest.ini  requirements.txt  script.js  server.js  styles.css  tailwind.config.js  validation.html  vite.config.ts
client/: index.html
data/: accommodationRates.json  accommodationRates.json.backup  internationalRates.json  perDiemRates.json  sampleFlights.json  transportationRates.json
database/: schema.sql  travel_rates.db
documents/: AMADEUS_SETUP.md  CODE_ANALYSIS_REPORT.md  DATABASE_SCHEMA.md  DATABASE_SUMMARY.md  DATABASE_UPDATE_GUIDE.md  DATABASE_VISUAL.md  DEPLOYMENT.md  FEATURE_UPDATE.md  FLIGHT_API_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  PROJECT_COMPLETE.md  README.md  RECOMMENDATIONS.md  WHATS_NEW_v1.2.md  pyproject.toml  scrapers.py
scripts/: analyze_sources.py  checkMealPlan.js  checkMealRates.js  checkSchema.js  checkScrapedData.js  check_argentina_source.py  check_breakfast.py  check_full_content.py  check_international_countries.py  check_navigation.py  check_njc_page.py  check_pagination.py  check_titles.py  db_summary.py  debugMunichPlan.js  debug_argentina.py  debug_canberra.py  debug_currency.py  final_stats.py  (+29 more)
(+16 files in other folders)
